fix: restyle gap between columns

--- a/src/pages/calendar/calendar.style.scss
+++ b/src/pages/calendar/calendar.style.scss
@@ -30,10 +30,11 @@
       "schedule class-seg class-ter class-qua class-qui class-sex"
       "schedule class-seg class-ter class-qua class-qui class-sex";
     grid-template-rows: 30px;
-    gap: 5px 15px;
+    gap: 5px 10px;
   }
 
   &__schedule {
+    margin-right: 5px;
     text-align: center;
     display: grid;
     grid-template-rows: repeat(5, 60px);
